# wavy

./: .Doxyfile  .clang-format-ignore  .clang-tidy  .gitattributes  .gitignore  .gitmessage  .gitmodules  .pre-commit-config.yaml  APIref.md  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  build.sh  decode.cpp  dispatcher.cpp  encode.cpp  flac.cpp  flac.h  logger.hpp  server.cpp
.github/workflows/: build-arch.yml  build-examples-ubuntu.yml  build-fedora.yml  build-image.yml  build-plugins.yml  build-ubuntu.yml  build.yml  clang-tidy.yml  codeql-wavy.yml  formatting.yml
assets/templates/: README.md
assets/templates/plugin/: CMakeLists.txt
assets/templates/plugin/audio-backend/: CMakeLists.txt
assets/templates/subproject/: CMakeLists.txt
audio-backends/alsa/: entry.hpp
audio-backends/alsa/src/: entry.cpp
audio-backends/pulseaudio/: entry.hpp
audio-backends/pulseaudio/src/: entry.cpp
backends/: README.md
backends/alsa/: CMakeLists.txt  entry.hpp  plugin.toml
backends/alsa/src/: entry.cpp
backends/pulseaudio/: CMakeLists.txt  entry.hpp
backends/pulseaudio/src/: entry.cpp
ci/: apt-packages.txt  pacman-packages.txt  rpm-packages.txt
cmake/: CheckHeaders.cmake  GenerateAudioPluginRegistry.cmake  GenerateFetcherPluginRegistry.cmake  PkgConfigDetect.cmake
examples/: README.md
examples/abr/: CMakeLists.txt  main.cpp
examples/db/: CMakeLists.txt  main.cpp
examples/decoder/: CMakeLists.txt  main.cpp
examples/dispatcher/: CMakeLists.txt  main.cpp
examples/encoder/: Makefile  encode.cpp  encode_mp3
examples/flac/: CMakeLists.txt  Makefile  main.cpp
examples/hls/: CMakeLists.txt  Makefile  main.cpp
examples/m3u8parser/: CMakeLists.txt  main.cpp
examples/miniaudio/: main.cpp
examples/network/: CMakeLists.txt  chunked.cpp  main.cpp
examples/registry/: CMakeLists.txt  main.cpp
examples/toml/: Makefile  gen.cpp  parse.cpp
examples/transcoder/: CMakeLists.txt  Makefile  transcode-flac.cpp  transcode.cpp
examples/zstd/: compression.c  decompression.c
frontend/: README.md  player.py  source.py
include/: README.md  common.h  compression.h  decode.hpp  decompression.h  encode.hpp  logger.hpp  macros.hpp  playback.hpp  registry.hpp  state.hpp  zstd-logging.h
include/abr/: ABRManager.hpp  Makefile  NetworkDiagnoser.hpp  PlaylistParser.hpp  abr  main.cpp
include/codecs/flac/: bitrate.hpp  metadata.hpp
include/examples/decoder/: main.cpp
include/examples/encoder/: encode.cpp
include/examples/flac/: Makefile  bitrate.cpp  main.cpp
include/examples/miniaudio/: main.cpp
include/examples/registry/: Makefile  main.cpp
include/examples/zstd/: compression.c  decompression.c
include/ipc/: ipc.hpp
include/libwavy-abrate/: ABRManager.hpp  NetworkDiagnoser.hpp  PlaylistParser.hpp  README.md  main.cpp
include/libwavy-common/: README.md  logger.hpp  macros.hpp  state.hpp
include/libwavy-ffmpeg/: README.md
include/libwavy-ffmpeg/encoder/: entry.hpp
include/libwavy-ffmpeg/hls/: entry.hpp
include/libwavy-ffmpeg/misc/: metadata.hpp
include/libwavy-ffmpeg/transcoder/: entry.hpp
include/libwavy-server/: README.md  server.hpp  serverHelper.cpp
include/registry-examples/: main.cpp
include/server/: server.hpp  serverHelper.cpp
include/toml/: sample.toml  toml_generator.hpp  toml_parser.hpp
include/toml-examples/: Makefile  parse.cpp
include/toml/examples/: gen.cpp  parse.cpp
include/unix/: domainBind.hpp
include/zstd-examples/: compression.c  decompression.c
libquwrof/: CMakeLists.txt  README.md
libquwrof/schema/: schema.hpp
libquwrof/window/: entry.hpp
libquwrof/window/src/: MainWindow.cpp
libwavy/: LOGGING.md  README.md  audioConfig.h.in  config.h.in  fetcherConfig.h.in  log-macros.hpp  logger.hpp  playback.hpp  zstd-logging.h
libwavy/abrate/: ABRManager.hpp  Makefile  NetworkDiagnoser.hpp  PlaylistParser.hpp
libwavy/audio/: README.md  interface.hpp
libwavy/audio/plugin/: entry.hpp
libwavy/codecs/flac/: metadata.hpp
libwavy/common/: README.md  common.h  error.hpp  macros.hpp  path.hpp  state.hpp  types.hpp
libwavy/common/api/: entry.hpp
libwavy/common/network/: routes.h
libwavy/components/: README.md
libwavy/components/client/: daemon.hpp
libwavy/db/: db.h  entry.hpp  error.hpp  structs.hpp
libwavy/dispatch/: entry.hpp
libwavy/ffmpeg/: README.md
libwavy/ffmpeg/decoder/: entry.hpp
libwavy/ffmpeg/hls/: entry.hpp
libwavy/ffmpeg/misc/: metadata.hpp
libwavy/ffmpeg/transcoder/: README.md  entry.hpp
libwavy/libwavy-db/: db.hpp
libwavy/network/: entry.hpp
libwavy/parser/: README.md  entry.hpp  macros.hpp
libwavy/parser/ast/: entry.hpp
libwavy/registry/: entry.hpp
libwavy/server/: README.md  auth.hpp  health.hpp  metrics.hpp  owner-metrics.hpp  prototypes.hpp  request-timer.hpp  server.hpp  serverHelper.cpp  session.hpp
libwavy/server/methods/: download.hpp  owners.hpp
libwavy/timer/: timer.h
libwavy/toml/: sample.toml  toml_generator.hpp  toml_parser.hpp
libwavy/toml/examples/: gen.cpp  parse.cpp
libwavy/tsfetcher/: entry.hpp  interface.hpp
libwavy/tsfetcher/methods/: README.md
libwavy/tsfetcher/methods/aggr/: CMakeLists.txt  entry.hpp
libwavy/tsfetcher/methods/aggr/src/: entry.cpp
libwavy/tsfetcher/plugin/: README.md  entry.hpp
libwavy/unix/: domainBind.hpp
libwavy/utils/audio/: entry.hpp
libwavy/zstd/: compression.h  decompression.h
pkg-config/: wavy-ffmpeg.pc.in  wavy-server.pc.in  wavy-utils.pc.in
protocols/: main.rst
resources/: resources.qrc
scripts/: compiler-flags-fix.sh  license-prepend.sh  remove-license.sh
src/: Client.cpp  Owner.cpp  Server.cpp  client_receive.cpp  decode.cpp  dispatcher.cpp  encode.cpp  logger.cc  playback.cpp  server.cpp
src/ffmpeg/: Decoder.cc  HLS.cc  Transcoder.cc
src/helpers/: dispatcher.hpp
src/server/: Server.cc
src/utils/: Audio.cc
ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  README.md  main.cpp  schema.hpp
wavy/: Client.cc  Owner.cc  README.md  Server.cc
wavy/helpers/: Dispatcher.hpp
(+23 files in other folders)
