set(AUD_BACKEND_TITLE "ALSA")

set(AUD_BACKEND_NAME wavy_audio_backend_${AUD_BACKEND_TITLE}_plugin)
set(AUD_BACKEND_SRC src/entry.cpp)

message(STATUS "  >>> Building AUDIO BACKEND PLUGIN: ${AUD_BACKEND_TITLE}")
message(STATUS "  >>> Target: ${AUD_BACKEND_NAME}")
message(STATUS "  >>> Output Directory: ${WAVY_AUDIO_BACKEND_PLUGIN_OUTPUT_PATH}\n")

find_library(ALSA_LIB asound REQUIRED)

add_library(${AUD_BACKEND_NAME} SHARED ${AUD_BACKEND_SRC})
target_include_directories(${AUD_BACKEND_NAME} PRIVATE ${CMAKE_SOURCE_DIR} ${ALSA_LIB_DIRS} ${ZSTD_INCLUDE_DIRS})
target_link_libraries(${AUD_BACKEND_NAME} PRIVATE ${ALSA_LIB})

set_target_properties(${AUD_BACKEND_NAME} PROPERTIES
  LIBRARY_OUTPUT_DIRECTORY ${WAVY_AUDIO_BACKEND_PLUGIN_OUTPUT_PATH}
)
